2002-05-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.html:
	mark 2.5.1 as alpha quality

2002-04-26  Mikhael Goikhman  <migo@homemail.com>

	* index.html:
	* download.html:
	* generated/AUTHORS.html:
	* generated/FAQ.html:
	* generated/NEWS.html:
	updated for 2.5.1

2002-04-11  Mikhael Goikhman  <migo@homemail.com>

	* index.html:
	* download.html:
	* generated/AUTHORS.html:
	* generated/FAQ.html:
	* generated/NEWS.html:
	updated for 2.4.7

	* mod_f2m_communication.html:
	* screenshots/J_C_Lawrence.fvwm2rc:
	* screenshots/Tenebrae.fvwm2rc:
	* screenshots/index.html:
	handle fvwm2 executable (that was renamed to fvwm)

2002-03-31  Dominik Vogt  <dominik.vogt@gmx.de>

	* generated/txt2html.sh (outfile):
	automatically insert the "last updated" date at the end

2002-03-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.html:
	* download.html:
	updated for 2.4.6

2002-02-04  Dan Espen  <dane@mk.telcordia.com>

	* mod_f2m_communication.html: Language fix.

2002-02-03  olicha  <olivier.chapuis@free.fr>

	* mod_f2m_communication.html:
	s/id/window id/ in MX_PROPERTY_CHANGE description

2002-02-01  Dan Espen  <dane@mk.telcordia.com>

	* mod_f2m_communication.html: Language fix.
	* mod_initialization.html: Language fix.

2002-01-29  olicha  <olivier.chapuis@free.fr>

	* mod_f2m_communication.html:
	Documented the MX_PROPERTY_CHANGE and MX_VISIBLE* messages

	* mod_initialization.html:
	Say a word on the MX_PROPERTY_CHANGE message in the Transparent section,
	also replace root by parent in one place

2002-01-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.html:
	* download.html:
	updated for 2.4.5 and 2.5.0

2002-01-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* mod_m2f_communication.html:
	* mod_f2m_communication.html:
	documented new message types and new message interface

2002-01-12  Dan Espen  <dane@mk.telcordia.com>

	* developers.html: Link to bug downloads.
	* downloadbugs.html: Add page with links for downloading bug reports.
