@@ -14,11 +14,17 @@
 <p>
 FVWM is an extremely powerful ICCCM-compliant multiple virtual desktop window
 manager for the X Window system.
+
+<!-- current status added by migo -->
 <p>
-<font size="+2" color="yellow">NEWS FLASH!</font>
-<!-- FVWM 2.4.7, an official -->
+<b>Status</b>: It seems like <a href="http://www.hpc.uh.edu/">www.hpc.uh.edu</a>
+is down, so no email for now.
+
+<!--
+<p><font size="+1" color="yellow">NEWS FLASH!</font>
 FVWM 2.5.1, an alpha
 release, is now available for <a href="download.html">download</a>.
+-->
 
 <hr>
 <blockquote>
@@ -46,7 +52,7 @@ release, is now available for <a href="download.html">download</a>.
   <li><a href="links.html">Links</a>
   <li><a href="icons.html">Icons and Sounds Download</a>
   <li><a href="mailinglist.html">Mailing List Info</a>
-  - <a href="http://www.hpc.uh.edu/fvwm/archive">Archive</a>
+  <li><a href="http://www.hpc.uh.edu/fvwm/archive">Mail Archive</a>
   <li><a href="http://www.fvwm.org/cgi-bin/fvwm-bug">FVWM Bug Reporting</a>
   <li><a href="developers.html">Developer Info (CVS, Modules)</a>
   <li><a href="generated/AUTHORS.html">Acknowledgements</a>
@@ -57,7 +63,7 @@ release, is now available for <a href="download.html">download</a>.
 <hr>
 <center>
 Created: Jan 31, 1996;
-Last modified: Apr 25, 2002.
+Last modified: May 24, 2002.
 </center>
 
 <!--
