@@ -1,3 +1,10 @@
+2002-05-24  Mikhael Goikhman  <migo@homemail.com>
+
+	* index.html:
+	take out "NEWS FLASH", add temporary status instead;
+	once again split Mailing List Info and Mail Archive into 2 items
+	so we have an even number of items
+
 2002-05-08  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* index.html:
